# docs/swagger.json
@@ -54,7 +54,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/subscription.Subscription"
+                            "$ref": "#/definitions/subscription.SubscriptionCreateDTO"
                         }
                     }
                 ],
@@ -233,16 +233,10 @@
                 }
             }
         },
-        "subscription.Subscription": {
+        "subscription.SubscriptionCreateDTO": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
                 "end_date": {
-                    "type": "string"
-                },
-                "id": {
                     "type": "string"
                 },
                 "price": {
@@ -252,9 +246,6 @@
                     "type": "string"
                 },
                 "start_date": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 },
                 "user_id": {
